--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -7,3 +7,15 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.jumbotron h4 {
+  margin-bottom: 30px;
+}
+
+.jumbotron h1 {
+  font-weight: bold;
+}
+
+.jumbotron button {
+  margin-top: 30px;
+}
+
