--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -19,3 +19,11 @@
   margin-top: 30px;
 }
 
+.collab_container {
+  margin-top: 100px;
+}
+
+.collab_container img {
+  width: 200px;
+  margin-bottom: 50px;
+}
