Job List Screen

--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -86,3 +86,8 @@ footer img {
 .herojob_container .jumbotron {
   height: 300px;
 }
+
+.jobscreen_container {
+  margin-top: 50px;
+  margin-bottom: 200px;
+}
